Correct name whitespace error.

--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -45,7 +45,7 @@ $_o-brand-define-readme: "https://github.com/Financial-Times/o-brand/#obranddefi
 /// @return {string | number | color | bool | null}
 @function oBrandGet($component, $variables, $from: null) {
     // Validate component name.
-    $validated-component-name: _oBrandValidateName('Component', $component, 'Cannot get variables "#{$variables}" for component "#{$component}"');
+    $validated-component-name: _oBrandValidateName('Component', $component, 'Cannot get variable(s) "#{$variables}" for component "#{$component}"');
     // Validate variant name if getting the variables from a pre-defined variant.
     @if type-of($from) != 'map' and type-of($from) != 'null' {
         $validated: _oBrandValidateName(
@@ -160,7 +160,7 @@ $_o-brand-define-readme: "https://github.com/Financial-Times/o-brand/#obranddefi
                 $validated-default-variables: _oBrandValidateName(
                     'Variable',
                     $variable-name,
-                    'Cannot set variable "#{$variable-name}" of component "#{$component}" for brand "#{$brand}"'
+                    'Cannot set variable(s) "#{$variable-name}" of component "#{$component}" for brand "#{$brand}"'
                 );
             }
         }
@@ -283,14 +283,13 @@ $_o-brand-define-readme: "https://github.com/Financial-Times/o-brand/#obranddefi
     @if $name == '' {
         @error '#{$error-context}. #{$thing} "#{$name}" is invalid. #{$thing} names can not be an empty string.';
     }
-    // No whitespace.
-    @if index($name, " ") {
-        @error '#{$error-context}. #{$thing} "#{$name}" is invalid. #{$thing} names can not contain spaces.';
-    }
     // Valid characters only.
     $valid-characters: ('-', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z');
     @for $character-index from 1 through str-length($name) {
         $character: str-slice($name, $character-index, $character-index);
+        @if $character == " " {
+            @error '#{$error-context}. #{$thing} "#{$name}" is invalid. #{$thing} names can not contain spaces.';
+        }
         @if not index($valid-characters, $character) {
             @error '#{$error-context}. #{$thing} "#{$name}" is invalid. #{$thing} names can only contain lowercase alphanumeric characters and "-".';
         }
